fix: 更新项目负责人职务信息
- 将马晓星教授的现任职务从'南京大学计算机科学与技术系主任'更正为'南京大学计算机学院院长'

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -14,7 +14,7 @@ const teams = [
       name: '马晓星',
       title: '博士，教授，博士生导师',
       position: '国家杰出青年科学基金项目负责人',
-      currentRole: '南京大学计算机科学与技术系主任',
+      currentRole: '南京大学计算机学院院长',
       avatar: '/images/mxx.png',
       bio: '主要研究领域包括智能化软件工程、软件自适应技术等。主持国家973/863项目课题、国家自然科学基金重大项目课题等多个重要科研项目，在国内外重要学术期刊和会议发表论文百余篇，并获ACM SigSoft杰出论文奖、ICSE最佳论文奖等。'
     }
