--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import { useTranslations } from '../config';
 const t = useTranslations('zh');
 ---
 
-<Layout title="关于项目 - UROS">
+<Layout title="关于项目 - UOS">
   <section class="page-header">
     <div class="container">
       <h1>{t('about.title')}</h1>
