--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -5,7 +5,7 @@ import { useTranslations } from '../../config';
 const t = useTranslations('en');
 ---
 
-<Layout title="About - UROS">
+<Layout title="About - UOS">
   <section class="page-header">
     <div class="container">
       <h1>{t('about.title')}</h1>
