--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -5,7 +5,7 @@ import { useTranslations } from '../../config';
 const t = useTranslations('en');
 ---
 
-<Layout title="UROS - Human-Cyber-Physical Convergence Operating System">
+<Layout title="UOS - Human-Cyber-Physical Convergence Operating System">
   <section class="hero">
     <div class="container">
       <div class="hero-content">
