--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import { useTranslations } from '../config';
 const t = useTranslations('zh');
 ---
 
-<Layout title="UROS - 面向电力信息场景的人机物融合操作系统">
+<Layout title="UOS - 面向电力信息场景的人机物融合操作系统">
   <section class="hero">
     <div class="container">
       <div class="hero-content">
