--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ interface Props {
   description?: string;
 }
 
-const { title, description = 'UROS - 面向电力信息场景的人机物融合操作系统' } = Astro.props;
+const { title, description = 'UOS - 面向电力信息场景的人机物融合操作系统' } = Astro.props;
 const lang = getLangFromUrl(Astro.url);
 ---
 
