--- a/src/pages/news/[...slug].astro
+++ b/src/pages/news/[...slug].astro
@@ -18,7 +18,7 @@ const { Content } = await entry.render();
 const t = useTranslations('zh');
 ---
 
-<Layout title={`${entry.data.title} - UROS`} description={entry.data.description}>
+<Layout title={`${entry.data.title} - UOS`} description={entry.data.description}>
   <article class="article">
     <div class="container">
       <div class="article-header">
