--- a/src/pages/news/index.astro
+++ b/src/pages/news/index.astro
@@ -12,7 +12,7 @@ const allNews = await getCollection('news', ({ data }) => {
 const sortedNews = allNews.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 ---
 
-<Layout title="新闻动态 - UROS">
+<Layout title="新闻动态 - UOS">
   <section class="page-header">
     <div class="container">
       <h1>{t('news.title')}</h1>
