--- a/src/pages/en/docs.astro
+++ b/src/pages/en/docs.astro
@@ -15,10 +15,7 @@ import Layout from '../../layouts/Layout.astro';
       <div class="content">
         <h2>Technical Documentation</h2>
         <div class="doc-links">
-          <a href="/en/docs/rosix-whitepaper" class="doc-link">
-            <h3>ROSIX Whitepaper (UOS Technical Specification Draft)</h3>
-            <p>Resource Operating System Interface Whitepaper v1.2, detailed technical specifications and API reference</p>
-          </a>
+          <p class="note">Technical documentation is being developed. Stay tuned.</p>
         </div>
         
         <h2>Contents</h2>
